tests/ui/invalid_pymodule_args.stderr
error: expected one of: `name`, `crate`, `module`, `submodule`, `gil_used`
 --> tests/ui/invalid_pymodule_args.rs:3:12
  |
3 | #[pymodule(some_arg)]
  |            ^^^^^^^^

error: `gil_used` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:8:36
  |
8 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                    ^^^^^^^^

error: `name` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:8:67
  |
8 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                                                   ^^^^

error: `gil_used` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:13:36
   |
13 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                    ^^^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:13:67
   |
13 | #[pyo3::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                                                   ^^^^
